--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "http-server": "14.1.1",
     "pako": "2.1.0",
     "terser": "5.30.3"
+  },
+  "dependencies": {
+    "@js-preview/excel": "^1.7.5",
+    "monaco-editor": "^0.47.0"
   }
 }
